--- a/week 4 STUDENT_NAME.ipynb
+++ b/week 4 STUDENT_NAME.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Lab Assignment: Introduction to Pandas\n",
-    "Student:     **INSERT YOUR NAME HERE**\n",
+    "Student:     **Hilda Michael**\n",
     "\n",
     "### Objective: To introduce data manipulation and analysis in Python using Pandas and understand Pandas data structures and basic operations.\n",
     "\n",
@@ -36,90 +36,77 @@
     "\n",
     "### Student Submission\n",
     "1.  Read a CSV file into a Pandas DataFrame."
-   ]
+   ]df = pd.read_csv('file_name.csv', index_col='Column1')
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+   
     "2.  Display the first 5 rows of a Pandas DataFrame."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
+   import pandas as pd
+df = pd.read_csv('path_to_your_file.csv')
+
+data = {'Column1': [1, 2, 3, 4, 5], 'Column2': ['A', 'B', 'C', 'D', 'E']}
+df = pd.DataFrame(data)
+print(df.head())
+print(df.head(3))
+df.head()
+  Column1 Column2
+0        1       A
+1        2       B
+2        3       C
+3        4       D
+4        5       E
+
    "source": [
     "3.  Display the last 5 rows of a Pandas DataFrame."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "4.  Create a new column in a Pandas DataFrame by combining two existing columns."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "5.  Group a Pandas DataFrame by a specific column and calculate the mean of another column for each group."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.10.0"
-  },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  import pandas as pd 
+ data = {
+    'Name': ['John', 'Mark', 'Alice', 'Julie', 'Lisa', 'David'],
+    'Age': [23, 34, 45, 19, 28, 31],
+    'Gender': ['M', 'M', 'F', 'F', 'F', 'M']
 }
+df = pd.DataFrame(data)
+last_five_rows = df.tail()
+print(last_five_rows)
+
+      Name  Age Gender
+1   Mark   34      M
+2  Alice   45      F
+3  Julie   19      F
+4   Lisa   28      F
+5  David   31      M
+df.tail(5)
+    "4.  Create a new column in a Pandas DataFrame by combining two existing columns."
+   pip install pandas
+import pandas as pd
+data = {
+    'First Name': ['John', 'Jane', 'Alice'],
+    'Last Name': ['Doe', 'Smith', 'Johnson']
+}
+
+df = pd.DataFrame(data)
+df['Full Name'] = df['First Name'] + ' ' + df['Last Name']
+print(df)
+ First Name Last Name     Full Name
+0       John       Doe      John Doe
+1       Jane     Smith    Jane Smith
+2     Alice   Johnson  Alice Johnson
+
+
+    "5.  Group a Pandas DataFrame by a specific column and calculate the mean of another column for each group."
+   data = 
+    'Product': ['A', 'B', 'A', 'B', 'C', 'A', 'C'],
+    'Sales': [100, 200, 150, 300, 250, 400, 350]
+
+
+df = pd.DataFrame(data)
+}grouped_df = df.groupby('Product')['Sales'].mean()
+result_df = grouped_df.reset_index()
+result_df.columns = ['Product', 'Mean_Sales']
+  Product  Mean_Sales
+0       A       216.67
+1       B       250.00
+2       C       300.00
