--- a/week 7 STUDENT_NAME(1).ipynb
+++ b/week 7 STUDENT_NAME(1).ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Lab Assignment: Exploratory Data Analysis\n",
-    "Student:     **INSERT YOUR NAME HERE**\n",
+    "Student:     **Hilda_Michael**\n",
     "\n",
     "### Objective: To gain an understanding of exploratory data analysis (EDA) techniques and their application using Pandas, Pandas Profiling, and Matplotlib.\n",
     "\n",
@@ -80,44 +80,76 @@
     "# Load the Titanic dataset from Seaborn\n",
     "titanic = sns.load_dataset('titanic')\n",
     "titanic.count()\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Student Submission:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
-}
+  
+import pandas as pd
+
+# Load the dataset
+titanic_df = pd.read_csv('titanic.csv')
+
+# Display the first 5 rows
+print(titanic_df.head())
+# Summary statistics
+summary_statistics = titanic_df.describe()
+print(summary_statistics)
+# Calculate summary statistics
+summary_statistics = df.describe(include='all')
+print(summary_statistics)
+import matplotlib.pyplot as plt
+
+# Visualize distribution of target variable
+df['survived'].value_counts().plot(kind='bar')
+plt.title('Distribution of Survival')
+plt.xlabel('Survived (0 = No, 1 = Yes)')
+plt.ylabel('Count')
+plt.show()
+# Visualize distribution by class
+pd.crosstab(df['pclass'], df['survived']).plot(kind='bar', stacked=True)
+plt.title('Survival Distribution by Class')
+plt.xlabel('Passenger Class')
+plt.ylabel('Count')
+plt.legend(title='Survived', labels=['No', 'Yes'])
+plt.show()
+# Plot histogram for age distribution
+df['age'].hist(bins=30)
+plt.title('Age Distribution')
+plt.xlabel('Age')
+plt.ylabel('Frequency')
+plt.show()
+# Create scatter plot for age vs fare
+plt.scatter(df['age'], df['fare'])
+plt.title('Scatter Plot of Age vs Fare')
+plt.xlabel('Age')
+plt.ylabel('Fare')
+plt.show()
+from pandas_profiling import ProfileReport
+
+# Generate profile report
+profile = ProfileReport(df)
+profile.to_file("titanic_report.html")
+
+import matplotlib.pyplot as plt
+
+# Bar chart for target variable
+titanic_df['Survived'].value_counts().plot(kind='bar')
+plt.title('Distribution of Survival')
+plt.xlabel('Survived')
+plt.ylabel('Count')
+plt.xticks([0, 1], ['No', 'Yes'], rotation=0)
+plt.show()
+
+import seaborn as sns
+
+# Visualize missing values using heatmap
+sns.heatmap(df.isnull(), cbar=False)
+plt.title('Missing Values Heatmap')
+plt.show()
+
+# Boxplot for fare to identify outliers
+sns.boxplot(x=df['fare'])
+plt.title('Boxplot of Fare to Identify Outliers')
+plt.show()
+# Correlation matrix visualization using heatmap
+correlation_matrix = df.corr()
+sns.heatmap(correlation_matrix, annot=True)
+plt.title('Correlation Matrix Heatmap')
+plt.show()
